--- a/app/views/User/Signin.html
+++ b/app/views/User/Signin.html
@@ -1,16 +1,23 @@
 {{set . "title" "Signin"}}
 {{template "header.html" .}}
 
-<form method="POST"> 
+<form method="POST" align="center"> 
     {{with $field := field "user.Email" .}} 
     <div class="control-group {{$field.ErrorClass}}"> 
       <label class="control-label" for="{{$field.Id}}">电子邮件</label> 
-      <div class="controls"> 
-        <input type="email" id="{{$field.Id}}" name="{{$field.Name}}" value="{{$field.Flash}}" required> 
-        {{if $field.Error}} 
-        <span class="help-inline">{{$field.Error}}</span> 
-        {{end}} 
-      </div> 
+        <div class="controls"> 
+          <input type="email" id="{{$field.Id}}" name="{{$field.Name}}" value="{{$field.Flash}}" required> 
+          {{if $field.Error}} 
+          <span class="help-inline">{{$field.Error}}</span> 
+          {{end}} 
+        </div> 
+        <label class="control-label" for="{{$field.Id}}">password</label> 
+        <div class="controls"> 
+          <input type="password" id="{{$field.Id}}" name="{{$field.Name}}" value="{{$field.Flash}}" required> 
+          {{if $field.Error}} 
+          <span class="help-inline">{{$field.Error}}</span> 
+          {{end}} 
+        </div> 
     </div> 
     {{end}}
 
